Use CRF layer from Tensorflow Addons

--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,7 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+.history
 ### VirtualEnv template
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
